<resources>
    <string name="app_name">RoboArm</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_troca">Troca</string>
    <string name="title_roboarm">RoboArm</string>
    <string name="title_bateria">Bateria</string>
    <string name="scan">Procurar</string>
    <string name="device">Dispositivo</string>
    <string name="disconnect">Desconectar</string>
    <string name="roboarm">RoboArm</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_speed1">Speed 1</string>
    <string name="button_speed2">Speed 2</string>
    <string name="servo_base">Base</string>
    <string name="servo_altura">Altura</string>
    <string name="servo_alcance">Alcance</string>
    <string name="servo_garra">Garra</string>
    <string name="_0angle">0°</string>
    <string name="_180angle">180°</string>
    <string name="button_switch_battery">Bateria</string>

    <string name="text_list_clear">Lista de Comandos Vazia</string>
    <string name="message_search_device">Aguarde, procurando por dispositivos</string>
    <string name="message_pair_device">Aguarde, pareando dispositivo</string>
    <string name="dialog_negative_button">Cancelar</string>
    <string name="dialog_neutral_button">OK</string>
    <string name="message_despair_device">Dispositivo despareado</string>
    <string name="message_paired_device_already_exists">Já existe um dispositivo pareado</string>
    <string name="message_permission_important">Permissão solicitada é importante para o uso da aplicação</string>
    <string name="message_bluetooth_activate_success">Bluetooth ativida com sucesso</string>
    <string name="message_bluetooth_activate_important">Ativar o Bluetooth é importante para o uso da aplicação</string>
    <string name="message_dont_device_pair">Não há dispositivo pareado</string>
    <string name="message_pair_device_success">Dispositivo pareado com sucesso</string>
    <string name="message_fail_connection">Não foi possível parear com dispositivo</string>
    <string name="information_commands">Informações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_perc_battery">100%</string>
    <string name="text_volt_battery">9v</string>
    <string name="_0perc">0%</string>
    <string name="_0volt">0v</string>
    <string name="text_switch_power_supply">Fonte</string>
    <string name="text_switch_battery">Bateria</string>
    <string name="text_name_device">Nome do Dispositivo</string>
    <string name="text_address_device">Endereço do Dispositivo</string>
    <string name="text_devices_header_pair">Dispositivos Salvos</string>
    <string name="text_devices_header_found">Dispositivos Encontrados</string>

</resources>