<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewHeaderPair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/text_devices_header_pair"
        android:textColor="@color/black_700"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textViewHeaderFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/text_devices_header_found"
        android:textColor="@color/black_700"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textViewDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_name_device"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDeviceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_address_device" />
</LinearLayout>